// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Configuration/Webpack Implementation Custom Settings test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // .storybook/main.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
        webpackFinal
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class>
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/storybook-tools/storybookConfig.mjs"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        default
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        webpackFinal
      </span>
      <span class="token operator">
        :
      </span>
      <span class>
      </span>
      <span class="token keyword">
        async
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        config
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
        updatedConfig
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token keyword">
        await
      </span>
      <span class>
      </span>
      <span class="token function">
        webpackFinal
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class>
        config
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ...Apply your custom configuration settings here to \`updatedConfig\`
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
        updatedConfig
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ...main.mjs configuration
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Configuration/Webpack Implementation test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // .storybook/main.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
        webpackFinal
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class>
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "@idesigncode/storybook-tools/storybookConfig.mjs"
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        default
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
        webpackFinal
      </span>
      <span class="token punctuation">
        ,
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // ...main.mjs configuration
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Configuration/Webpack Raw Import test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // Component.stories.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        import
      </span>
      <span class>
        ComponentExampleRaw
      </span>
      <span class="token keyword">
        from
      </span>
      <span class>
      </span>
      <span class="token string">
        "./Component.example.mjs?raw"
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Configuration/Webpack Webpack Final Config test 1`] = `
<div class="Source sb-unstyled ">
  <pre class="prismjs">
    <code class="language-jsx"
          style="white-space: pre;"
    >
      <span class="token comment">
        // @idesigncode/storybook-tools/storybookConfig.mjs
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        export
      </span>
      <span class>
      </span>
      <span class="token keyword">
        const
      </span>
      <span class>
      </span>
      <span class="token function-variable function">
        webpackFinal
      </span>
      <span class>
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token keyword">
        async
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        config
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token comment">
        // Enable 'raw imports' for all files
      </span>
      <span class>
      </span>
      <span class>
        config
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        module
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        rules
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class="token function">
        map
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token parameter">
        rule
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token operator">
        =&gt;
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        if
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        (
      </span>
      <span class="token operator">
        !
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        type
      </span>
      <span class="token operator">
        ||
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        type
      </span>
      <span class="token operator">
        !==
      </span>
      <span class>
      </span>
      <span class="token string">
        "asset/source"
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        .
      </span>
      <span class>
        resourceQuery
      </span>
      <span class="token operator">
        =
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        {
      </span>
      <span class>
      </span>
      <span class="token literal-property property">
        not
      </span>
      <span class="token operator">
        :
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        [
      </span>
      <span class="token regex regex-delimiter">
        /
      </span>
      <span class="token regex regex-source language-regex">
        raw
      </span>
      <span class="token regex regex-delimiter">
        /
      </span>
      <span class="token punctuation">
        ]
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
        rule
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        )
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token keyword">
        return
      </span>
      <span class>
        config
      </span>
      <span class="token punctuation">
        ;
      </span>
      <span class>
      </span>
      <span class>
      </span>
      <span class="token punctuation">
        }
      </span>
      <span class="token punctuation">
        ;
      </span>
    </code>
  </pre>
  <button>
    Copy
  </button>
</div>
`;

exports[`Configuration/Webpack Webpack Final test 1`] = `""`;
